RESOLVED FIXED191326
RELEASE_ASSERT(!m_hardClosedForUserDelete) fails in WebCore::IDBServer::UniqueIDBDatabase::invokeOperationAndTransactionTimer
https://bugs.webkit.org/show_bug.cgi?id=191326
Summary RELEASE_ASSERT(!m_hardClosedForUserDelete) fails in WebCore::IDBServer::Uniqu...
Sihui Liu
Reported 2018-11-06 13:07:15 PST
From release assertion added in r236747, we knew UniqueIDBDatabase::enqueueTransaction is invoking the timer after database connection closed.
Attachments
Patch (14.83 KB, patch)
2018-11-06 19:29 PST, Sihui Liu
no flags
Patch (16.70 KB, patch)
2018-11-07 14:15 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2018-11-06 13:08:22 PST
Sihui Liu
Comment 2 2018-11-06 19:29:03 PST
Sihui Liu
Comment 3 2018-11-07 14:15:10 PST
EWS Watchlist
Comment 4 2018-11-07 14:19:28 PST
Attachment 354150 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3602: developmentRegion is not en. [xcodeproj/settings] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 5 2018-11-07 15:12:41 PST
Comment on attachment 354150 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354150&action=review > Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabaseConnection.cpp:244 > +void UniqueIDBDatabaseConnection::deleteTransaction(UniqueIDBDatabaseTransaction& transaction) Is this preferable to abortTransactionWithoutCallback?
Sihui Liu
Comment 6 2018-11-07 15:30:24 PST
Comment on attachment 354150 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354150&action=review >> Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabaseConnection.cpp:244 >> +void UniqueIDBDatabaseConnection::deleteTransaction(UniqueIDBDatabaseTransaction& transaction) > > Is this preferable to abortTransactionWithoutCallback? We abort the transaction if it already begins; transaction in m_pendingTransactions is not activated/started yet.
Geoffrey Garen
Comment 7 2018-11-07 16:04:30 PST
Comment on attachment 354150 [details] Patch r=me
WebKit Commit Bot
Comment 8 2018-11-07 17:31:48 PST
Comment on attachment 354150 [details] Patch Clearing flags on attachment: 354150 Committed r237969: <https://trac.webkit.org/changeset/237969>
WebKit Commit Bot
Comment 9 2018-11-07 17:31:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.