RELEASE_ASSERT(!m_hardClosedForUserDelete) fails in WebCore::IDBServer::UniqueIDBDatabase::invokeOperationAndTransactionTimer https://bugs.webkit.org/show_bug.cgi?id=191326 <rdar://problem/45769269>

Reviewed by Geoffrey Garen.

Source/WebCore:

UniqueIDBDatabase should ignore incoming requests or operations when it is already marked as
hardClosedForUserDelete.

Test: IndexedDB.IndexedDBUserDelete.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::didPerformActivateTransactionInBackingStore):
(WebCore::IDBServer::UniqueIDBDatabase::immediateCloseForUserDelete):
* Modules/indexeddb/server/UniqueIDBDatabaseConnection.cpp:
(WebCore::IDBServer::UniqueIDBDatabaseConnection::establishTransaction):
(WebCore::IDBServer::UniqueIDBDatabaseConnection::deleteTransaction):
* Modules/indexeddb/server/UniqueIDBDatabaseConnection.h:
* Modules/indexeddb/server/UniqueIDBDatabaseTransaction.cpp:
(WebCore::IDBServer::UniqueIDBDatabaseTransaction::commit):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBUserDelete.html: Added.
* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBUserDelete.mm: Added.
(-[IndexedDBUserDeleteMessageHandler userContentController:didReceiveScriptMessage:]):
(TEST):


Canonical link: https://commits.webkit.org/206192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237969 268f45cc-cd09-0410-ab3c-d52691b4dbfc