Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabaseConnection.h
@@ -84,6 +84,8 @@ public:
 
     bool connectionIsClosing() const;
 
+    void deleteTransaction(UniqueIDBDatabaseTransaction&);
+
 private:
     UniqueIDBDatabaseConnection(UniqueIDBDatabase&, ServerOpenDBRequest&);
 
